--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -11,7 +11,7 @@
       "source": [
         "#@title { form-width: \"2%\" }\n",
         "#@markdown\n",
-        "# chk 00 2\n",
+        "# chk 00 3\n",
         "\n",
         "dev = False\n",
         "\n",
@@ -2008,6 +2008,7 @@
         "    try:\n",
         "        if attrs.add_source == LOCALFILE_ADDSOURCE:\n",
         "            ti = lt.torrent_info(attrs.torfile)\n",
+        "            infohash_sha1 = ti.info_hash()\n",
         "            attrs.name = ti.name()\n",
         "            if not ti.is_valid():\n",
         "                result.status = ADDERROR\n",
@@ -2020,6 +2021,7 @@
         "            attrs.name = get_magnet_name(attrs.magnet)\n",
         "            params = lt.parse_magnet_uri(attrs.magnet)\n",
         "            params.save_path = temp_save\n",
+        "            infohash_sha1 = params.info_hash\n",
         "        info(f\"Adding download: {attrs.name} with {attrs.add_source}.\")\n",
         "        if not attrs.ready: \n",
         "            prep: Prepare_Result = prepare_download(attrs)\n",
@@ -2028,7 +2030,9 @@
         "                result.status = ADDPENDING\n",
         "                replace_download_decision(prep)\n",
         "                return result\n",
-        "    \n",
+        "        handlecheck = ses.find_torrent(infohash_sha1)\n",
+        "        if handlecheck.is_valid():\n",
+        "            ses.remove_torrent(handlecheck)\n",
         "        handle: lt.torrent_handle = ses.add_torrent(params)\n",
         "        handle.name = attrs.name\n",
         "        if not handle.is_valid():\n",
