--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -11,7 +11,7 @@
       "source": [
         "#@title { form-width: \"2%\" }\n",
         "#@markdown\n",
-        "# chk 00 3\n",
+        "# chk 00 \n",
         "\n",
         "dev = False\n",
         "\n",
@@ -2204,12 +2204,13 @@
         "        for diritem in originaldiritems:\n",
         "            originalfilenames = diritem[1].copy()\n",
         "            diritem[1].clear()\n",
-        "            srtfilecount = 0\n",
         "            dirpath =  f\"{localsavingpath}/{diritem[0]}/\" if diritem[0] else f'{localsavingpath}/'\n",
         "            info(f\"Checking dir at {dirpath}\")\n",
         "            for filename in originalfilenames:\n",
         "                if filename in selectedfilenames or not selectedfilenames:\n",
         "                    suffix = ''\n",
+        "                    langsuffix = ''\n",
+        "                    suffixfilecount = 0\n",
         "                    filename_split = os.path.splitext(filename)\n",
         "                    filenamewithoutextension = filename_split[0]\n",
         "                    fileextension = filename_split[1].lower()\n",
@@ -2221,14 +2222,17 @@
         "                    elif  (fileextension == \".mp4\" or fileextension == \".mkv\" or fileextension in subtitlefile_extensions):\n",
         "                        if fileextension in subtitlefile_extensions: \n",
         "                            langsearch = langs_pt.findall(filenamewithoutextension)\n",
-        "                            if langsearch:  suffix = f\".{title(langsearch[-1])}\" \n",
-        "                            else:\n",
-        "                                suffix = f\"-{srtfilecount}\" if srtfilecount else ''\n",
-        "                                srtfilecount += 1\n",
+        "                            if langsearch:  \n",
+        "                                langsuffix = f\".{title(langsearch[-1])}\"\n",
         "                        if filenamewithoutextension != newname:\n",
-        "                            filenewname = newname + suffix + fileextension\n",
-        "                            info(f\"Renaming: {filename} to {filenewname}\")\n",
+        "                            filenewname = newname + langsuffix + fileextension\n",
         "                            renamedfilepath = dirpath + filenewname\n",
+        "                            while os.path.exists(renamedfilepath):\n",
+        "                                suffixfilecount += 1\n",
+        "                                suffix = f\".{suffixfilecount}{langsuffix}\"\n",
+        "                                filenewname = newname + suffix + fileextension\n",
+        "                                renamedfilepath = dirpath + filenewname\n",
+        "                            info(f\"Renaming: {filename} to {filenewname}\")\n",
         "                            cmd = f'mv \"{originalfilepath}\" \"{renamedfilepath}\"'\n",
         "                            !$cmd\n",
         "                            filename = filenewname\n",
@@ -3428,7 +3432,7 @@
         "def move_download_old_files(attrs: DownloadAttrs): #disabled temporarly \n",
         "    info(f'Cleaning distination for: {attrs.save_name}')\n",
         "    attrs.old_files = set()\n",
-        "    delstr = '.del' + nowstr()\n",
+        "    delstr = '.replaced-' + nowstr()\n",
         "    if 1 <= attrs.type_/TV < 1.1 :\n",
         "        for diritem in attrs.downloaded_diritems: #diritem is tuple of a dir and its content\n",
         "            season = get_season(diritem[0])\n",
@@ -3445,9 +3449,9 @@
         "                        if output:  error(lines = output)\n",
         "                        attrs.old_files.add(oldfiletemppath)\n",
         "                        info(f'Old file added: {lookup1[\"foundname\"]}')\n",
-        "                        if attrs.backup and attrs.baksv: #fixbackup\n",
+        "                        if attrs.backup and attrs.baksv:                    #fixbackup\n",
         "                            for bkdir in range(len(attrs.baksv)):\n",
-        "                                oldfilepath = f\"{bkdir}/filename\"       #TODO\n",
+        "                                oldfilepath = f\"{bkdir}/filename\"       \n",
         "                                if os.path.exists(oldfilepath):\n",
         "                                    oldfiletemppath = \"bk\"\n",
         "                                    if not os.path.isdir(oldfiletemppath):      os.makedirs(oldfiletemppath)\n",
@@ -3459,26 +3463,27 @@
         "    elif attrs.type_ == MOVIE:       \n",
         "        for diritem in attrs.downloaded_diritems:\n",
         "            targetdir = os.path.normpath(f\"{attrs.existing_path}/{diritem[0]}\")\n",
-        "            oldfiletemppath = f\"{targetdir}/{delstr}\"\n",
+        "            oldfiletemppath = os.path.normpath(f\"{attrs.existing_path}/{delstr}/{diritem[0]}\")\n",
         "            os.makedirs(oldfiletemppath, exist_ok=True)\n",
         "            for filename in diritem[1]:\n",
         "                oldfilepath = f\"{targetdir}/{filename}\"\n",
-        "                info(f'Moving: {oldfilepath} to {oldfiletemppath}')\n",
-        "                cmd = f'mv \"{oldfilepath}\" \"{oldfiletemppath}\"'\n",
-        "                output = !$cmd\n",
-        "                if output:  error(lines = output)\n",
-        "                attrs.old_files.add(oldfiletemppath)\n",
-        "                info(f'Old file added: {oldfilepath}')\n",
-        "                if attrs.backup and attrs.baksv:                                #fixbackup\n",
-        "                    for oldfilepath in len(attrs.baksv):\n",
-        "                        if os.path.exists(oldfilepath):\n",
-        "                            oldfiletemppath = \"bk\"\n",
-        "                            if not os.path.isdir(oldfiletemppath):\n",
-        "                                os.makedirs(oldfiletemppath)\n",
-        "                            info(f'Moving: {oldfilepath} to {oldfiletemppath}')\n",
-        "                            cmd = f'mv \"{oldfilepath}\" \"{oldfiletemppath}\"'\n",
-        "                            output = !$cmd\n",
-        "                            if output:  info(lines = output)         \n",
+        "                if os.path.isfile(oldfilepath):\n",
+        "                    info(f'Moving: {oldfilepath} to {oldfiletemppath}')\n",
+        "                    cmd = f'mv \"{oldfilepath}\" \"{oldfiletemppath}\"'\n",
+        "                    output = !$cmd\n",
+        "                    if output:  error(lines = output)\n",
+        "                    attrs.old_files.add(oldfiletemppath)\n",
+        "                    info(f'Old file added: {oldfilepath}')\n",
+        "                    if attrs.backup and attrs.baksv:                                #fixbackup\n",
+        "                        for oldfilepath in len(attrs.baksv):\n",
+        "                            if os.path.exists(oldfilepath):\n",
+        "                                oldfiletemppath = \"bk\"\n",
+        "                                if not os.path.isdir(oldfiletemppath):\n",
+        "                                    os.makedirs(oldfiletemppath)\n",
+        "                                info(f'Moving: {oldfilepath} to {oldfiletemppath}')\n",
+        "                                cmd = f'mv \"{oldfilepath}\" \"{oldfiletemppath}\"'\n",
+        "                                output = !$cmd\n",
+        "                                if output:  info(lines = output)         \n",
         "    info('Cleaning distination done.')\n",
         "    return\n",
         "    cmd\n",
